Dont print message if there were no fails

--- a/fiber_resampling.ipynb
+++ b/fiber_resampling.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,8 @@
     "        \n",
     "        print(\"Finished {:3.0f}%\".format(100*(i+1)/len(fibers)), end=\"\\r\")\n",
     "    \n",
-    "    print(\"Failed to resample {} out of {} fibers, they were not included.\".format(n_fails, len(fibers)))\n",
+    "    if n_fails > 0:\n",
+    "        print(\"Failed to resample {} out of {} fibers, they were not included.\".format(n_fails, len(fibers)))\n",
     "        \n",
     "    position.finalize_append()\n",
     "    tangent.finalize_append()\n",
@@ -159,8 +160,8 @@
    "outputs": [],
    "source": [
     "config = dict(\n",
-    "    subject=\"992774\",\n",
-    "    bundle=\"CC\",\n",
+    "    subject=\"917255\",\n",
+    "    bundle=\"merged_w1\",\n",
     "    n_pts=\"auto\",\n",
     "    smoothing=5,\n",
     ")"
@@ -168,15 +169,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed to resample 8 out of 45528 fibers, they were not included.\n",
-      "Saving to subjects/992774/resampled_fibers/CC_smooth=5_npts=auto.trk\n"
+      "Failed to resample 0 out of 18332 fibers, they were not included.\n",
+      "Saving subjects/917255/resampled_fibers/merged_w1_smooth=5_npts=auto.trk\n"
      ]
     }
    ],
