Add validation set to entrak training

--- a/entrack/training_conditional_t.ipynb
+++ b/entrack/training_conditional_t.ipynb
@@ -49,20 +49,20 @@
    "outputs": [],
    "source": [
     "class conditional_samples(tf.keras.utils.Sequence):\n",
-    "    def __init__(self, config):\n",
+    "    def __init__(self, sample_dir, batch_size=256, istraining=True, max_n_samples=np.inf):\n",
     "        \"\"\"\"\"\"\n",
-    "        self.batch_size = config[\"batch_size\"]\n",
-    "        self.istraining = config[\"istraining\"]\n",
+    "        self.batch_size = batch_size\n",
+    "        self.istraining = istraining\n",
     "\n",
-    "        samples = np.load(os.path.join(config[\"sample_dir\"], \"samples.npz\"))\n",
+    "        samples = np.load(os.path.join(sample_dir, \"samples.npz\"))\n",
     "        \n",
     "        self.inputs = samples[\"inputs\"]\n",
     "        self.outputs = samples[\"outputs\"]\n",
     "        \n",
     "        assert len(self.inputs) == len(self.outputs)\n",
     "        \n",
-    "        self.inputs = self.inputs[:min(config[\"max_n_samples\"], len(self.inputs))]\n",
-    "        self.outputs = self.outputs[:min(config[\"max_n_samples\"], len(self.outputs))]\n",
+    "        self.inputs = self.inputs[:min(max_n_samples, len(self.inputs))]\n",
+    "        self.outputs = self.outputs[:min(max_n_samples, len(self.outputs))]\n",
     "        \n",
     "        self.n_samples = len(self.inputs)\n",
     "        \n",
@@ -83,19 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train_model(config):\n",
     "    \n",
-    "    sample_path = os.path.join(config[\"sample_dir\"], \"samples.npz\")\n",
-    "    \n",
     "    hasher = md5()\n",
-    "    hasher.update(open(sample_path, \"rb\").read())\n",
-    "    hasher.update(str(config[\"max_n_samples\"]).encode())\n",
-    "    hasher.update(str(config[\"batch_size\"]).encode())\n",
-    "    hasher.update(str(config[\"epochs\"]).encode())\n",
+    "    for v in config.values():\n",
+    "        hasher.update(str(v).encode())\n",
     "    \n",
     "    save_dir = os.path.join(\"..\", \"models\", config[\"model_name\"], hasher.hexdigest())\n",
     "    \n",
@@ -105,7 +101,9 @@
     "    \n",
     "    # Define Model Function and Loss\n",
     "    \n",
-    "    input_shape = np.load(sample_path)[\"inputs\"].shape[1:]\n",
+    "    train_path = os.path.join(config[\"train_dir\"], \"samples.npz\")\n",
+    "    \n",
+    "    input_shape = np.load(train_path)[\"inputs\"].shape[1:]\n",
     "    inputs = Input(shape=input_shape, name=\"inputs\")\n",
     "\n",
     "    def model_fn(inputs):\n",
@@ -135,8 +133,10 @@
     "        return -K.mean(predicted_distribution.log_prob(observed_y))\n",
     "    \n",
     "    # Run Training\n",
-    "    \n",
-    "    train_seq = conditional_samples(config)\n",
+    "\n",
+    "    train_seq = conditional_samples(config[\"train_dir\"], config[\"batch_size\"],\n",
+    "                                    max_n_samples=config[\"max_n_samples\"])\n",
+    "    eval_seq = conditional_samples(config[\"eval_dir\"], istraining=False)\n",
     "    try:\n",
     "        no_exception = True\n",
     "\n",
@@ -149,20 +149,20 @@
     "        train_history = model.fit_generator(\n",
     "            train_seq,\n",
     "            epochs=config[\"epochs\"],\n",
-    "            #validation_data=eval_sequence,\n",
+    "            validation_data=eval_seq,\n",
     "            callbacks=[\n",
     "                TensorBoard(log_dir=save_dir, write_graph=False),\n",
-    "                #ModelCheckpoint(\"weights.{epoch:02d}-{val_loss:.2f}.hdf5\", save_freq=\"epoch\"),\n",
+    "                ModelCheckpoint(os.path.join(save_dir, \"weights.{epoch:02d}-{val_loss:.2f}.h5\"),\n",
+    "                                save_best_only=True),\n",
     "                # EarlyStopping(min_delta=0.05, patience=10, restore_best_weights=True, verbose=1)\n",
     "            ],\n",
-    "            #validation_steps=1,\n",
     "            max_queue_size=2*config[\"batch_size\"],\n",
     "            use_multiprocessing=True,\n",
     "            workers=cpu_count()\n",
     "        )\n",
-    "    #except KeyboardInterrupt:\n",
-    "    #    os.rename(save_dir, save_dir + \"_stopped\")\n",
-    "    #    save_dir = save_dir + \"_stopped\"\n",
+    "    except KeyboardInterrupt:\n",
+    "        os.rename(save_dir, save_dir + \"_stopped\")\n",
+    "        save_dir = save_dir + \"_stopped\"\n",
     "    except Exception as e:\n",
     "        shutil.rmtree(save_dir)\n",
     "        no_exception = False\n",
@@ -192,102 +192,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = dict(\n",
-    "    istraining=True,\n",
     "    model_name=\"entrack_conditional\",\n",
-    "    sample_dir=\"../subjects/992774/samples/fa7c02604b92de5f32cd3b61dbc2f8b7\",\n",
+    "    train_dir=\"../subjects/917255/samples/462c43d3c41d74cf9fad8d4e2802695f\",\n",
+    "    eval_dir=\"../subjects/992774/samples/0c7f800138a28ef0840333930880d857\",\n",
     "    max_n_samples=np.inf,\n",
-    "    batch_size = 128,\n",
-    "    epochs = 1,\n",
+    "    batch_size = 256,\n",
+    "    epochs = 10,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W1014 13:01:35.505799 139703451047680 deprecation.py:323] From /local/home/vwegmayr/miniconda2/envs/thesis/lib/python3.6/site-packages/tensorflow_probability/python/distributions/von_mises_fisher.py:312: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"entrack_conditional\"\n",
-      "__________________________________________________________________________________________________\n",
-      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
-      "==================================================================================================\n",
-      "inputs (InputLayer)             [(None, 18)]         0                                            \n",
-      "__________________________________________________________________________________________________\n",
-      "dense (Dense)                   (None, 1024)         19456       inputs[0][0]                     \n",
-      "__________________________________________________________________________________________________\n",
-      "dense_1 (Dense)                 (None, 1024)         1049600     dense[0][0]                      \n",
-      "__________________________________________________________________________________________________\n",
-      "dense_2 (Dense)                 (None, 512)          524800      dense_1[0][0]                    \n",
-      "__________________________________________________________________________________________________\n",
-      "dense_4 (Dense)                 (None, 512)          524800      dense_1[0][0]                    \n",
-      "__________________________________________________________________________________________________\n",
-      "dense_3 (Dense)                 (None, 3)            1539        dense_2[0][0]                    \n",
-      "__________________________________________________________________________________________________\n",
-      "dense_5 (Dense)                 (None, 1)            513         dense_4[0][0]                    \n",
-      "__________________________________________________________________________________________________\n",
-      "mu (Lambda)                     (None, 3)            0           dense_3[0][0]                    \n",
-      "__________________________________________________________________________________________________\n",
-      "kappa (Lambda)                  (None,)              0           dense_5[0][0]                    \n",
-      "__________________________________________________________________________________________________\n",
-      "distribution_lambda (Distributi ((None, 3), (None, 3 0           mu[0][0]                         \n",
-      "                                                                 kappa[0][0]                      \n",
-      "==================================================================================================\n",
-      "Total params: 2,120,708\n",
-      "Trainable params: 2,120,708\n",
-      "Non-trainable params: 0\n",
-      "__________________________________________________________________________________________________\n",
-      "37456/37456 [==============================] - 270s 7ms/step - loss: -1.4761\n",
-      "Saving ../models/entrack_conditional/8d5593b08d4548286cc8564373e82e11/config.yml\n",
-      "Saving ../models/entrack_conditional/8d5593b08d4548286cc8564373e82e11/model.h5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# TODO: Implement validation set + scoring\n",
     "model = train_model(config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: id=190536, shape=(5, 3), dtype=float32, numpy=\n",
-       "array([[ 0.47958416,  0.8244671 ,  0.30042145],\n",
-       "       [ 0.46007687,  0.68369097,  0.5664768 ],\n",
-       "       [ 0.80774355,  0.553578  , -0.20273554],\n",
-       "       [ 0.5488573 ,  0.7383294 , -0.39195067],\n",
-       "       [ 0.6753007 ,  0.70020163, -0.23170364]], dtype=float32)>"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model(np.random.rand(5,18)).mean_direction"
    ]
   },
   {
