Fix trk saving in fiber_resampling

--- a/fiber_resampling.ipynb
+++ b/fiber_resampling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,6 +12,9 @@
     "rn.seed(12345)\n",
     "from numpy.random import seed\n",
     "seed(42)\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "\n",
     "import yaml\n",
     "\n",
@@ -23,12 +26,13 @@
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from hashlib import md5\n",
     "from nibabel.streamlines.tractogram import Tractogram, PerArraySequenceDict\n",
+    "from nibabel.streamlines.trk import TrkFile\n",
     "from nibabel.streamlines.array_sequence import ArraySequence"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,8 +94,9 @@
     "        return\n",
     "    \n",
     "    trk_path = os.path.join(subject_dir, \"tracts\", config[\"bundle\"] + \".trk\")\n",
-    "    fibers = nib.streamlines.load(trk_path).tractogram.streamlines\n",
-    "        \n",
+    "    trk_file = nib.streamlines.load(trk_path)\n",
+    "    fibers = trk_file.tractogram.streamlines\n",
+    "    \n",
     "    position = ArraySequence()\n",
     "    tangent = ArraySequence()\n",
     "    binormal = ArraySequence()\n",
@@ -143,19 +148,19 @@
     "    tractogram = Tractogram(\n",
     "        streamlines=position,\n",
     "        data_per_point=data_per_point,\n",
-    "        affine_to_rasmm=np.eye(4)\n",
+    "        affine_to_rasmm=trk_file.tractogram.affine_to_rasmm\n",
     "    )\n",
     "    \n",
     "    os.makedirs(save_dir, exist_ok=True)\n",
     "    print(\"Saving {}\".format(save_path))\n",
-    "    nib.streamlines.save(tractogram, save_path)\n",
-    "\n",
+    "    TrkFile(tractogram).save(save_path)\n",
+    "    \n",
     "    return tractogram"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,21 +168,20 @@
     "    subject=\"917255\",\n",
     "    bundle=\"merged_w1\",\n",
     "    n_pts=\"auto\",\n",
-    "    smoothing=5,\n",
+    "    smoothing=6,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Failed to resample 0 out of 18332 fibers, they were not included.\n",
-      "Saving subjects/917255/resampled_fibers/merged_w1_smooth=5_npts=auto.trk\n"
+      "Saving subjects/917255/resampled_fibers/merged_w1_smooth=6_npts=auto.trk\n"
      ]
     }
    ],
