Minor beautification of generate_conditional_samples_t

--- a/generate_conditional_samples_t.ipynb
+++ b/generate_conditional_samples_t.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,9 @@
     "from tensorflow.compat.v1 import set_random_seed\n",
     "set_random_seed(42)\n",
     "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "import nibabel as nib\n",
     "import nipy as ni\n",
     "import numpy as np\n",
@@ -23,12 +26,9 @@
     "import yaml\n",
     "import csv\n",
     "import json\n",
-    "import warnings\n",
     "\n",
     "from hashlib import md5\n",
-    "from scipy.interpolate import RegularGridInterpolator\n",
-    "\n",
-    "warnings.filterwarnings('ignore')"
+    "from scipy.interpolate import RegularGridInterpolator"
    ]
   },
   {
@@ -48,18 +48,15 @@
     "    dwi_path = os.path.join(subject_dir, config[\"dwi_path\"])\n",
     "    \n",
     "    hasher = md5()\n",
-    "    hasher.update(config[\"sample_type\"].encode())\n",
-    "    hasher.update(open(dwi_path, \"rb\").read())\n",
-    "    hasher.update(open(trk_path, \"rb\").read())\n",
-    "    hasher.update(str(config[\"reverse_samples\"]).encode())\n",
-    "    hasher.update(str(config[\"max_n_samples\"]).encode())\n",
+    "    for v in config.values():\n",
+    "        hasher.update(str(v).encode())\n",
     "    \n",
     "    save_dir = os.path.join(subject_dir, \"samples\", hasher.hexdigest())\n",
     "    if os.path.exists(save_dir):\n",
     "        print(\"Samples with this config have been created already:\\n{}\".format(save_dir))\n",
     "        return None, None\n",
     "    \n",
-    "    tracts = nib.streamlines.load(trk_path).tractogram # coordinates in mmRAS+ space\n",
+    "    tracts = nib.streamlines.load(trk_path).tractogram\n",
     "    assert tracts.data_per_point is not None\n",
     "    assert \"t\" in tracts.data_per_point\n",
     "    \n",
@@ -154,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +159,7 @@
     "    subject=\"992774\",\n",
     "    sample_type=\"conditional_t\",\n",
     "    dwi_path = \"fod.nii.gz\",\n",
-    "    trk_path = \"resampled_fibers/CC_smooth=5_npts=auto.trk\",\n",
+    "    trk_path = \"resampled_fibers/merged_w1_smooth=5_npts=auto.trk\",\n",
     "    block_size = 3,\n",
     "    reverse_samples = True,\n",
     "    max_n_samples = 1000,\n",
@@ -186,13 +183,6 @@
    "source": [
     "inputs, outputs = create_samples(config)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
