generate samples and train rnn model with interpolation

--- a/rnn_model/generate_rnn_samples.ipynb
+++ b/rnn_model/generate_rnn_samples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,15 +24,17 @@
     "import csv\n",
     "import json\n",
     "import warnings\n",
+    "import time\n",
     "\n",
     "from hashlib import md5\n",
+    "from scipy.interpolate import RegularGridInterpolator\n",
     "\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,12 +57,12 @@
     "        print(\"Samples with this config have been created already:\\n{}\".format(save_dir))\n",
     "        return\n",
     "    \n",
-    "    tracts = nib.streamlines.load(trk_path).tractogram # coordinates in mmRAS+ space\n",
+    "    tracts = nib.streamlines.load(trk_path).tractogram\n",
     "    assert tracts.data_per_point is not None\n",
     "    assert \"t\" in tracts.data_per_point\n",
     "    \n",
     "    dwi_img = ni.load_image(dwi_path)\n",
-    "    xyz2ijk = lambda r: dwi_img.coordmap.inverse()([r[0], r[1], r[2], 0]).round().astype(int)\n",
+    "    xyz2ijk = lambda r: dwi_img.coordmap.inverse()([r[0], r[1], r[2], 0])[:3]\n",
     "    dwi = dwi_img.get_data()\n",
     "\n",
     "    n_fibers = len(tracts)\n",
@@ -79,17 +81,36 @@
     "    total_samples = 0\n",
     "    done=False\n",
     "    for fi, f in enumerate(tracts):\n",
+    "        start = time.time()\n",
     "        fib_len = (len(f)-2) * 2 if config[\"reverse_samples\"] else len(f)-2\n",
     "        split_num = fib_len // config['seq_len']\n",
     "        max_samples = split_num // 2 if config[\"reverse_samples\"] else split_num\n",
     "        n_samples = n_samples - (fib_len % config['seq_len'])\n",
     "        \n",
-    "        tract_input = np.zeros((split_num, config['seq_len'], 18))\n",
+    "        tract_input = np.zeros((split_num, config['seq_len'], 408))\n",
     "        tract_output = np.zeros((split_num, config['seq_len'], 3))\n",
     "        for i, r in enumerate(f.streamline[1:-1]): # Exclude end points        \n",
     "            try:\n",
     "                idx = xyz2ijk(r) # anchor idx\n",
-    "                d = dwi[idx[0], idx[1], idx[2], :]\n",
+    "                IDX = np.round(idx).astype(int)\n",
+    "                \n",
+    "                values = np.zeros([3, 3, 3,\n",
+    "                                   config[\"block_size\"], config[\"block_size\"], config[\"block_size\"],\n",
+    "                                   dwi.shape[-1]])\n",
+    "                \n",
+    "                for x in range(config[\"block_size\"]):\n",
+    "                    for y in range(config[\"block_size\"]):\n",
+    "                        for z in range(config[\"block_size\"]):\n",
+    "                            values[x, y, z,:] = dwi[\n",
+    "                                IDX[0] + x - 2 * (config[\"block_size\"] // 2) : IDX[0] + x + 1,\n",
+    "                                IDX[1] + y - 2 * (config[\"block_size\"] // 2) : IDX[1] + y + 1,\n",
+    "                                IDX[2] + z - 2 * (config[\"block_size\"] // 2) : IDX[2] + z + 1,\n",
+    "                                :]\n",
+    "                fn = RegularGridInterpolator(([-1,0,1],[-1,0,1],[-1,0,1]), values)\n",
+    "                \n",
+    "                d = fn([idx[0]-IDX[0], idx[1]-IDX[1], idx[2]-IDX[2]])[0]\n",
+    "                d = d.flatten() # to get back the spatial order: reshape(bs, bs, bs, dwi.shape[-1])\n",
+    "                \n",
     "            except IndexError:\n",
     "                n_samples -= (2 if config[\"reverse_samples\"] else 1)\n",
     "                print(\"Index error at r={}, idx={}, fiber_idx={}\\n\".format(r,idx,perm[fi]) +\n",
@@ -124,13 +145,15 @@
     "        \n",
     "        inputs.append(tract_input)\n",
     "        outputs.append(tract_output)\n",
-    "        print(\"Finished {:3.0f}%\".format(100*total_samples/n_samples), end=\"\\r\")\n",
+    "        print(\"Finished {:3.0f}% in {}\".format(100*total_samples/n_samples, time.time() - start), end=\"\\r\")\n",
     "        \n",
     "        if done:\n",
     "            break         \n",
     "\n",
     "    os.makedirs(save_dir)\n",
     "\n",
+    "    inputs = np.concatenate(inputs, axis=0)\n",
+    "    outputs = np.concatenate(outputs, axis=0)\n",
     "    save_path = os.path.join(save_dir, \"samples.npz\")\n",
     "    \n",
     "    print(\"Saving {}\".format(save_path))\n",
@@ -147,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,22 +179,24 @@
     "    sample_type=\"rnn\",\n",
     "    seq_len=3,\n",
     "    dwi_path = \"fod.nii.gz\",\n",
-    "    trk_path = \"resampled_fibers/CC_smooth=5_npts=auto.trk\",\n",
+    "    trk_path = \"resampled_fibers/merged_w20_smooth=6_npts=auto.trk\",\n",
     "    reverse_samples = True,\n",
-    "    max_n_samples = np.inf,\n",
+    "    block_size = 3,\n",
+    "    max_n_samples = 1000,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finished   9%\r"
+      "Saving ../subjects/992774/samples/e09d97e5447d8a380d51369e4e4f692f/samples.npz\n",
+      "Saving ../subjects/992774/samples/e09d97e5447d8a380d51369e4e4f692f/config.yml\n"
      ]
     }
    ],
@@ -181,11 +206,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(346, 3, 3)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "np.concatenate(inputs, axis=0).shape"
+    "outputs.shape"
    ]
   },
   {
