--- a/rnn_model/training_rnn.ipynb
+++ b/rnn_model/training_rnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,15 +76,15 @@
     "             return np.ceil(self.n_samples / self.batch_size).astype(int)\n",
     "    \n",
     "    def __getitem__(self, idx):\n",
-    "        x_batch = np.vstack(self.inputs[idx * self.batch_size:(idx + 1) * self.batch_size])\n",
-    "        y_batch = np.vstack(self.outputs[idx * self.batch_size:(idx + 1) * self.batch_size])\n",
+    "        x_batch = self.inputs[idx * self.batch_size:(idx + 1) * self.batch_size, ...]\n",
+    "        y_batch = self.outputs[idx * self.batch_size:(idx + 1) * self.batch_size, ...]\n",
     "        \n",
     "        return x_batch, y_batch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,9 +112,9 @@
     "\n",
     "    def model_fn(inputs):\n",
     "        \n",
-    "        x = GRU(config['hidden_sizes'][0])(inputs)\n",
+    "        x = GRU(config['hidden_sizes'][0], return_sequences=True)(inputs)\n",
     "        for hidden_size in config['hidden_sizes'][1:]:\n",
-    "            x = GRU(hidden_size)(x)\n",
+    "            x = GRU(hidden_size, return_sequences=True)(x)\n",
     "        x = Dense(output_shape, activation='linear')(x)\n",
     "        return x\n",
     "\n",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,30 +183,86 @@
     "    istraining=True,\n",
     "    model_name=\"rnn_pd\",\n",
     "    hidden_sizes=[500, 500],\n",
-    "    times_steps=1,\n",
-    "    sample_dir=\"../subjects/992774/samples/3f1c59de6dc6db5c9a856175f0e15d8f\",\n",
+    "    time_step=1,\n",
+    "    sample_dir=\"../subjects/992774/samples/e09d97e5447d8a380d51369e4e4f692f\",\n",
     "    max_n_samples=np.inf,\n",
     "    batch_size = 128,\n",
-    "    epochs = 1,\n",
+    "    epochs = 10,\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"rnn_pd\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "inputs (InputLayer)          [(128, 3, 408)]           0         \n",
+      "_________________________________________________________________\n",
+      "gru_14 (GRU)                 (128, 3, 500)             1365000   \n",
+      "_________________________________________________________________\n",
+      "gru_15 (GRU)                 (128, 3, 500)             1503000   \n",
+      "_________________________________________________________________\n",
+      "dense_6 (Dense)              (128, 3, 3)               1503      \n",
+      "=================================================================\n",
+      "Total params: 2,869,503\n",
+      "Trainable params: 2,869,503\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "Epoch 1/10\n",
+      "2/2 [==============================] - 1s 319ms/step - loss: 0.3220\n",
+      "Epoch 2/10\n",
+      "2/2 [==============================] - 0s 250ms/step - loss: 0.1674\n",
+      "Epoch 3/10\n",
+      "2/2 [==============================] - 0s 224ms/step - loss: 0.1044\n",
+      "Epoch 4/10\n",
+      "2/2 [==============================] - 0s 213ms/step - loss: 0.0935\n",
+      "Epoch 5/10\n",
+      "2/2 [==============================] - 0s 226ms/step - loss: 0.0788\n",
+      "Epoch 6/10\n",
+      "2/2 [==============================] - 0s 200ms/step - loss: 0.0645\n",
+      "Epoch 7/10\n",
+      "2/2 [==============================] - 0s 214ms/step - loss: 0.0501\n",
+      "Epoch 8/10\n",
+      "2/2 [==============================] - 0s 204ms/step - loss: 0.0503\n",
+      "Epoch 9/10\n",
+      "2/2 [==============================] - 0s 234ms/step - loss: 0.0446\n",
+      "Epoch 10/10\n",
+      "2/2 [==============================] - 0s 211ms/step - loss: 0.0368\n",
+      "Saving ../models/rnn_pd/cc1276f6bdc33f83d085f09884ced9df/config.yml\n",
+      "Saving ../models/rnn_pd/cc1276f6bdc33f83d085f09884ced9df/model.h5\n"
+     ]
+    }
+   ],
    "source": [
     "model = train_model(config)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(128, 3, 3)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "config['hidden_sizes'][0]"
+    "train_seq.outputs[0 * train_seq.batch_size:(0 + 1) * train_seq.batch_size, ...].shape"
    ]
   },
   {
